# epic

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  atomic.cpp  deferred.cpp  owned.cpp  shared.cpp
include/epic/: atomic.hpp  bag.hpp  base.hpp  cell.hpp  collector.hpp  deferred.hpp  epoch.hpp  global.hpp  guard.hpp  internal.hpp  intrusive_list.hpp  local.hpp  local_handle.hpp  nullable_ref.hpp  optional_ref.hpp  ordering.hpp  owned.hpp  pointer.hpp  queue.hpp  scope_guard.hpp  shared.hpp  type_alias.hpp
include/epic/deprecated/: intrusive_list.hpp
include/epic/sync/: intrusive_list.hpp  queue.hpp
src/: bag.cpp  collector.cpp  global.cpp  guard.cpp  local.cpp  local_handle.cpp  ordering.cpp
test/: CMakeLists.txt  atomic.cpp  bag.cpp  base.cpp  catch_main.cpp  cell.cpp  deferred.cpp  epoch.cpp  guard.cpp  internal.cpp  nullable_ref.cpp  ordering.cpp  owned.cpp  pointer.cpp  scope_guard.cpp  shared.cpp
